--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       };
 
       try {
-        const res = await fetch("https://your-vercel-backend.vercel.app/api/users", {
+        const res = await fetch("https://fetching-2d41-98s73mt9a-gonugunta-manideeps-projects.vercel.app/api/users", {
           method: "POST",
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(user)
